--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,28 +1,54 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta chaset="UFF-8">
-        <title>
-            osito peru
-        </title> 
-        <link rel="stylesheet" href="../CSS/estilo.css">
-    </head>
-    <body>  
-        <nav>
-            <u1>
-                <li>
-                    <a> INICIO </a>
-                </li>
-                <li>
-                    <a> GALERIA </a>
-                </li>
-                <li>
-                    <a ref="https://www.youtube.com/watch?v=BiVbQkdk9pk"> SOBRE MI </a>
-                </li>
-            </u1>
-        </nav>
-        <h1> olka</h1>
-        <img src_="https://th.bing.com/th/id/OIP.o7YlF0U265mCtoGisBLcQwHaJQ?pid=ImgDet&w=474&h=592&rs=1">
-        <img id="img1" src="../IMAGENES/shepai.jfif">
-    </body>
-    <footer>  </footer>
- </html>
+<head>
+    <meta charset="UTF-8">
+    <title>Osito Perú</title> 
+    <link rel="stylesheet" href="../CSS/estilo.css">
+</head>
+<body>  
+    <nav>
+        <ul>
+            <li><a href="#">INICIO</a></li>
+            <li class="opcion-submenu">
+                <a href="#">GALERÍA</a>
+                <ul class="submenu">
+                    <li><a href="Tema1.html">Biografía</a></li>
+                    <li><a href="Tema2.html">Presidencia</a></li>
+                </ul>
+            </li>  
+            <li><a href="https://www.youtube.com/watch?v=BiVbQkdk9pk">SOBRE MÍ</a></li>
+        </ul>
+    </nav>
+    <section id="galeria">
+        <h2>Galería de imágenes</h2>
+        <div class="imagenes">
+            <img src="../IMAGENES/shepai.jfif" alt="Imagen 1">
+            <img src="../IMAGENES/BB perriyo.jfif" alt="Imagen 2">
+            <img src="../IMAGENES/tump XD.jfif" alt="Imagen 3">
+        </div>
+    </section>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Tt2aWaSFsR8?si=F0ewrUka9U86wnOu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h1>Claudia, Presidenta Nacional de los Estados Unidos Mexicanos</h1>
+    <img src="https://th.bing.com/th/id/OIP.o7YlF0U265mCtoGisBLcQwHaJQ?pid=ImgDet&w=474&h=592&rs=1" alt="Claudia Sheinbaum">
+    <img id="img1" src="../IMAGENES/waza tump.jfif" alt="GATIYO">
+    <h2>Claudia</h2>
+    <p>Claudia Sheinbaum Pardo (Ciudad de México, 24 de junio de 1962) es una política, científica y académica mexicana. Es la presidenta de México desde el 1 de octubre de 2024 y la primera mujer en la historia de su país en ejercer el cargo.</p>
+    <button id="RANIA">¿QUIERES JUGAR FORT CONMIGO?</button>
+    <script src="../JAVASCRIP/onichan.js"></script>
+    <table class="tabla-imagenes">
+        <thead>
+            <tr>
+                <th>Imagen</th>
+                <th>Descripción</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><img src="../IMAGENES/GATIYO.webp" alt="Gatiyo insano"></td>
+                <td>Gatiyo insano waza 777</td>
+            </tr>
+        </tbody>
+    </table>
+</body>
+<footer></footer>
+</html>
